<resources>
    <!-- Messages -->
    <string name="error_not_found_imei">Error not found imei</string>
    <string name="error_soap_fault_response">Error soap fault response</string>
    <string name="error_soap_null_respose">Error soap null response</string>
    <string name="network_error">Network error</string>
    <string name="error_to_read_settings">Error to read settings</string>
    <string name="error_to_insert_location">Error to insert location</string>
    <string name="error_to_read_location">Error to read location</string>
    <string name="error_delete_location">Error delete location</string>
    <string name="google_play_service_is_not_installed">Google play service is not available</string>

    <!-- Preference keys -->
    <string name="key_boot_service">key_boot_service</string>
    <string name="key_gps_update_interval">key_gps_update_interval</string>
    <string name="key_smallest_displacement">key_smallest_displacement</string>
    <string name="key_min_accuracy">key_min_accuracy</string>
    <string name="key_min_satellites_count">key_min_satellites_count</string>
    <string name="key_min_snr">key_min_snr</string>
    <string name="key_server_ip">key_server_ip</string>
    <string name="key_network_update_interval">key_network_update_interval</string>

    <string name="dashboard">Dashboard</string>
    <string name="location">Location</string>
    <string name="log">Log</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>

    <string name="app_name">GPS tracker</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="date">Date</string>
    <string name="speed">Speed (km/h)</string>
    <string name="accuracy">Accuracy (m)</string>
    <string name="altitude">Altitude (m)</string>
    <string name="bearing">Bearing</string>
    <string name="satellites_count">Satellites count</string>
    <string name="snr">SNR</string>

    <string name="boot_service">Boot service</string>
    <string name="auto_start_service_after_reboot">Auto start service after reboot</string>

    <string name="gps">Gps</string>
    <string name="gps_update_interval">Gps update interval</string>
    <string name="enter_gps_update_interval">Enter gps update interval (sec)</string>

    <string name="smallest_displacement">Smallest displacement</string>
    <string name="enter_smallest_displacement">Enter smallest displacement (sec)</string>

    <string name="min_accuracy">Min accuracy</string>
    <string name="enter_min_accuracy">Enter min accuracy (m)</string>

    <string name="min_satellites_count">Min satellites count</string>
    <string name="enter_min_satellites_count">Enter min satellites count</string>

    <string name="gps_filter">Gps filter</string>

    <string name="min_snr">Min snr</string>
    <string name="select_min_satellites_snr">Select min satellites snr</string>

    <string name="network">Network</string>
    <string name="server_ip">Server ip</string>
    <string name="enter_server_ip">Enter server ip</string>

    <string name="network_update_interval">Network update interval</string>
    <string name="enter_network_update_interval">Enter network update interval (min)</string>

</resources>
