<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_bar_dashboard"
        android:icon="@drawable/ic_baseline_menu_24px"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/bottom_bar_location"
        android:icon="@drawable/ic_baseline_gps_fixed_24px"
        android:title="@string/location" />

    <item
        android:id="@+id/bottom_bar_log"
        android:icon="@drawable/ic_baseline_report_problem_24px"
        android:title="@string/log" />

    <item
        android:id="@+id/bottom_bar_map"
        android:icon="@drawable/ic_baseline_room_24px"
        android:title="@string/map" />

    <item
        android:id="@+id/bottom_bar_settings"
        android:icon="@drawable/ic_baseline_settings_20px"
        android:title="@string/settings" />
</menu>